--- a/index.html
+++ b/index.html
@@ -19,19 +19,18 @@
     <script src="js/script.js" defer></script>
     <link href="css/style.css" rel="stylesheet" />
     <link href="css/form.css" rel="stylesheet" />
-    <link href="css/addNewTask.css" rel="stylesheet" />
-    <link href="css/tasksList.css" rel="stylesheet" />
+    <link href="css/section.css" rel="stylesheet" />
+    <link href="css/taskList.css" rel="stylesheet" />
   </head>
   <body class="body">
     <header>
       <h1>Lista zadań</h1>
     </header>
 
-    <div class="addNewTask">
-      <div class="addNewTask__header">
-        <h2>Dodaj nowe zadanie</h2>
-      </div>
-      <div class="addNewTask__input">
+    <section class="section">
+      <h2 class="section__header">Dodaj nowe zadanie</h2>
+
+      <div class="section_body">
         <form class="js-form form">
           <input
             class="js-newTask form__input"
@@ -39,18 +38,14 @@
             placeholder="Co jest do zrobienia?"
             autofocus
           />
-          <button form__button>Dodaj zadanie</button>
+          <button class="form__button">Dodaj zadanie</button>
         </form>
       </div>
-    </div>
+    </section>
 
-    <div class="tasksList">
-      <div class="tasksList__header">
-        <h2>Lista zadań</h2>
-      </div>
-      <div class="tasksList__unorderedList">
-        <ul class="js-tasks"></ul>
-      </div>
-    </div>
+    <section class="section">
+      <h2 class="section__header">Lista zadań</h2>
+      <ul class="js-tasks taskList"></ul>
+    </section>
   </body>
 </html>
