--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To-do-list</title>
-    <meta property="og:image" content="photo/og_photo.jpg">
-    <link rel="icon" href="photo/icon.jpg">
+    <meta property="og:image" content="photo/og_photo.jpg" />
+    <link rel="icon" href="photo/icon.jpg" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -15,7 +15,7 @@
       referrerpolicy="no-referrer"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Poppins:ital,wght@0,400;0,700;1,400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400&display=swap"
       rel="stylesheet"
     />
     <script src="js/script.js" defer></script>
@@ -45,7 +45,10 @@
 
     <section class="section">
       <h2 class="section__header">Lista zadań</h2>
-      <ul class="js-tasks taskList"></ul>
+
+      <div class="section__container">
+        <ul class="js-tasks taskList"></ul>
+      </div>
     </section>
   </body>
 </html>
